--- a/README.Rmd
+++ b/README.Rmd
@@ -35,9 +35,8 @@ This package provides:
 | ... | Name | License | Link |
 | --- | ---- | ------- | ---- |
 | :heavy_check_mark: | Live Door News Corpus | [CC BY-ND 2.1 JP](http://creativecommons.org/licenses/by-nd/2.1/jp/) | [#](http://www.rondhuit.com/download.html#ldcc) |
-| :no_entry: | Japanese Realistic Textual Entailment Corpus | [CC BY-NC-SA 4.0](https://creativecommons.org/licenses/by-nc-sa/4.0/) | [#](https://github.com/megagonlabs/jrte-corpus) |
+| :heavy_check_mark: | Japanese Realistic Textual Entailment Corpus | [CC BY-NC-SA 4.0](https://creativecommons.org/licenses/by-nc-sa/4.0/) | [#](https://github.com/megagonlabs/jrte-corpus) |
 | :x: | JEITA Public Morphologically Tagged Corpus (in ChaSen format) | Unknown | [#](https://github.com/julianbetz/yokome-jpn-corpus) |
-| :x: | Kyoto University and NTT Blog Corpus (KNB Corpus) | 3-clause BSD license | [#](https://nlp.ist.i.kyoto-u.ac.jp/kuntt/) |
 
 ### Multilingual
 
