--- a/README.Rmd
+++ b/README.Rmd
@@ -16,6 +16,7 @@ require(ldccr)
 # ldccr
 
 <!-- badges: start -->
+[![ldccr status badge](https://paithiov909.r-universe.dev/badges/ldccr)](https://paithiov909.r-universe.dev)
 <!-- badges: end -->
 
 ## Overview
@@ -28,6 +29,18 @@ This package provides:
 
 1. parsers for several Japanese corpora that are free or open licensed (non proprietary).
 2. a downloader of zipped text files published on [Aozora Bunko](https://www.aozora.gr.jp/).
+
+## Installation
+
+```r
+# Enable repository from paithiov909
+options(repos = c(
+  paithiov909 = "https://paithiov909.r-universe.dev",
+  CRAN = "https://cloud.r-project.org"))
+
+# Download and install ldccr in R
+install.packages("ldccr")
+```
 
 ## Supported Corpora
 
