--- a/README.Rmd
+++ b/README.Rmd
@@ -93,7 +93,7 @@ if (require("polars", quietly = TRUE)) {
 }
 ```
 
-> Note: This example requires [polars](https://pola-rs.github.io/r-polars/) to read a gzipped NDJSON file.
+> NOTE: This example requires [polars](https://pola-rs.github.io/r-polars/) to read a gzipped NDJSON file.
 > For installation of polars, please see [Installation details](https://pola-rs.github.io/r-polars/vignettes/install.html).
 
 
